Bug Id :TISRLEE-1563 ,917